--- a/vignettes/PermulationWalkthrough.Rmd
+++ b/vignettes/PermulationWalkthrough.Rmd
@@ -37,7 +37,6 @@ rerpath = find.package('RERconverge')
 #read trees
 toytreefile = "subsetMammalGeneTrees.txt" 
 toyTrees=readTrees(paste(rerpath,"/extdata/",toytreefile,sep=""), max.read = 200)
-plot(toyTrees$masterTree)
 ```
 
 The foreground set for the marine mammals phenotype include 3 independent tip branches (walrus, seal, manatee) and the cetacean clade (killer whale, dolphin, and the cetacean ancestor). Walrus and seal branched out from a common ancestor, but the common ancestor is not included in the foreground set. To set up a foreground set that contains a mixture of independent tip species and clades, we can use the `foreground2TreeClades` function. This function requires the following input:
@@ -116,22 +115,28 @@ permpvalCC = permpvalcor(res,permCC)
 
 If we want to calculate the enrichment permulation statistics simultaneously, use the same function and set `calculateenrich`=T, as follows:
 
+```{r, message=F, warning=F, error=F, results=F}
+#load annotations
+annots=RERconverge::read.gmt("gmtfile.gmt")
+annotlist=list(annots)
+names(annotlist)="MSigDBpathways"
 
-[ADD ENRICHMENT EXAMPLE]
+#perform permulations
+permCCWithCor = getPermsBinary(20, marineFg, sisters_marine, root_sp, mamRERw, toyTrees, masterTree, permmode="cc",calculateenrich = T, annotlist=annotlist)
+```
 
-
-To run the Species Subset Match (SSM) permulation, we can use the same function `getPermsBinary` while setting `permmode`="ssm". Note that because the SSM method produces distinct sets of permulations for different genes, this method is much more computationally intensive and takes a significantly longer time compared to the CC method. Hence, we advise that the SSM method should be run in batches of smaller numbers of permulations. The outputs of different batches can then be combined using the `combinePermData` function, such as shown in the example below. Let's perform 10 permulations of the first 20 gene trees in the list.
+To run the Species Subset Match (SSM) permulation, we can use the same function `getPermsBinary` while setting `permmode`="ssm". Note that because the SSM method produces distinct sets of permulations for different genes, this method is much more computationally intensive and takes a significantly longer time compared to the CC method. Hence, we advise that the SSM method should be run in batches of smaller numbers of permulations. The outputs of different batches can then be combined using the `combinePermData` function, such as shown in the example below. Let's perform 10 permulations of the first 10 gene trees in the list.
 
 ```{r, message=F, warning=F, error=F, results=F}
 #specify the list of trees to permulate
-trees_example = toyTrees$trees[1:20]
+trees_example = toyTrees$trees[1:10]
 
 #perform 2 batches of binary SSM permulations
-permSSM1 = getPermsBinary(10, marineFg, sisters_marine, root_sp, mamRERw, toyTrees, masterTree, permmode="ssm",trees_example)
-permSSM2 = getPermsBinary(10, marineFg, sisters_marine, root_sp, mamRERw, toyTrees, masterTree, permmode="ssm",trees_example)
+permSSM1 = getPermsBinary(5, marineFg, sisters_marine, root_sp, mamRERw, toyTrees, masterTree, permmode="ssm",trees_example)
+permSSM2 = getPermsBinary(5, marineFg, sisters_marine, root_sp, mamRERw, toyTrees, masterTree, permmode="ssm",trees_example)
 
 #combine the outputs of 2 batches
-combpermSSM = combinePermData(permSSM1, permSSM2)
+combpermSSM = combinePermData(permSSM1, permSSM2, enrich=F)
 
 #calculate permulation p-values
 permpvalSSM = permpvalcor(res,combpermSSM)
@@ -145,7 +150,7 @@ RERconverge also allows user to produce permulated binary phenotype trees to use
 treeCC = simBinPhenoCC(toyTrees, masterTree, root_sp, marineFg, sisters_marine, pathvec, plotTreeBool=T)
 ```
 
-For SSM, the permulated tree of a gene may be different from that of another gene if they have different "species membership", meaning if the gene trees may be missing different sets of species. Below is an example permulation of a gene that has all marine foregrounds in its tree:
+For SSM, the permulated tree of a gene may be different from that of another gene if they have different "species membership", meaning if the gene trees may be missing different sets of species. Compared to `simBinPhenoCC`, `simBinPhenoSSM` requires an additional input `tree`, which specifies the gene tree of the specific gene to permulate. Below is an example permulation of a gene that has all marine foregrounds in its tree:
 
 ```{r}
 #producing one permulated tree for a gene with all marine foregrounds using SSM
@@ -223,8 +228,6 @@ numperms = 5
 
 SSMpermulatedTreesBatched = generatePermulatedBinPhenSSMBatched(trees_example, numperms, toyTrees, root_sp, marineFg, sisters_marine, pathvec)
 ```
-
-
 
 
 
