--- a/vignettes/PermulationWalkthrough.Rmd
+++ b/vignettes/PermulationWalkthrough.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "PermulationWalkthrough"
+title: "Permulation Walkthrough"
 author: "Amanda Kowalczyk and Elysia Saputra"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output:
@@ -52,7 +52,9 @@ marineFg = c("Killer_whale", "Dolphin", "Walrus", "Seal", "Manatee")
 sisters_marine = list("clade1"=c("Killer_whale", "Dolphin"))
 
 marineFgTree = foreground2TreeClades(marineFg,sisters_marine,toyTrees,plotTree=F)
-marineplot1 = plotTreeHighlightBranches(marineFgTree, hlspecies=which(marineFgTree$edge.length==1), hlcols="blue", main="Marine mammals trait tree")
+marineplot1 = plotTreeHighlightBranches(marineFgTree,
+                                        hlspecies=which(marineFgTree$edge.length==1),
+                                        hlcols="blue", main="Marine mammals trait tree")
 ```
 
 Notice that in the resulting binary trait tree, the ancestor of walrus and seal are not included in the foreground set. If this ancestor should also be included, the `sisters_list` input should be specified as follows:
@@ -60,18 +62,25 @@ Notice that in the resulting binary trait tree, the ancestor of walrus and seal 
 ```{r}
 sisters_marine2 = list("clade1"=c("Killer_whale","Dolphin"), "clade2"=c("Walrus","Seal"))
 marineFgTree2 = foreground2TreeClades(marineFg,sisters_marine2,toyTrees,plotTree=F)
-marineplot2 = plotTreeHighlightBranches(marineFgTree2, hlspecies=which(marineFgTree2$edge.length==1), hlcols="blue", main="Modified marine trait tree with walrus-seal ancestor")
+marineplot2 = plotTreeHighlightBranches(marineFgTree2,
+                        hlspecies=which(marineFgTree2$edge.length==1),
+                        hlcols="blue",
+                        main="Modified marine trait tree with walrus-seal ancestor")
 ```
 
 Thus, the `foreground2TreeClades` function allows for flexible definition of foregrounds that include tip branches and clades with any depth. Below is an example of how to specify foreground clades where the ancestor of an ancestor is also a foreground species:
 
 ```{r}
 fgExample = c("Golden_hamster","Chinese_hamster","Vole","Walrus","Seal")
-sisters_Example = list("clade1"=c("Golden_hamster","Chinese_hamster"),"clade2"=c("clade1","Vole"))
+sisters_Example = list("clade1"=c("Golden_hamster","Chinese_hamster"),
+                       "clade2"=c("clade1","Vole"))
 
 exampleFgTree = foreground2TreeClades(fgExample,sisters_Example,toyTrees,plotTree=F)
 
-exampleplot = plotTreeHighlightBranches(exampleFgTree, hlspecies=which(exampleFgTree$edge.length==1), hlcols="blue", main="Example trait tree with whole clade foreground")
+exampleplot = plotTreeHighlightBranches(exampleFgTree, 
+                    hlspecies=which(exampleFgTree$edge.length==1), 
+                    hlcols="blue", 
+                    main="Example trait tree with whole clade foreground")
 ```
 
 Back to the marine phenotype example, once we have the binary trait tree, we can calculate the actual correlations with RERs following the steps below. Note that when `foreground2TreeClades`is used, the `tree2PathsClades` function should be used to compute the paths, instead of the standard `tree2Paths` like in the Full Walkthrough.
@@ -84,7 +93,8 @@ pathvec = tree2PathsClades(marineFgTree, toyTrees)
 mamRERw = getAllResiduals(toyTrees, transform="sqrt", weighted=T, scale=T)
 
 # Calculate correlation 
-res = correlateWithBinaryPhenotype(mamRERw, pathvec, min.sp=10, min.pos=2, weighted="auto")
+res = correlateWithBinaryPhenotype(mamRERw, pathvec, min.sp=10, min.pos=2,
+                                   weighted="auto")
 ```
 
 After calculating the actual correlation statistics, we can proceed with calculating the permulated correlations. The function `getPermsBinary` performs permulations of binary traits and produces the null p-values, correlation statistics, and enrichment by taking in the following input:
@@ -111,7 +121,8 @@ root_sp = "Human"
 masterTree = toyTrees$masterTree
 
 #perform binary CC permulation
-permCC = getPermsBinary(100, marineFg, sisters_marine, root_sp, mamRERw, toyTrees, masterTree, permmode="cc")
+permCC = getPermsBinary(100, marineFg, sisters_marine, root_sp, mamRERw, toyTrees,
+                        masterTree, permmode="cc")
 
 #calculate permulation p-values
 permpvalCC = permpvalcor(res,permCC)
@@ -119,14 +130,16 @@ permpvalCC = permpvalcor(res,permCC)
 
 If we want to calculate the enrichment permulation statistics simultaneously, use the same function and set `calculateenrich`=T, as follows:
 
-```{r, message=F, warning=F, error=F, results=F}
+```{r, message=F, warning=F, error=F, results=F, fig.show="hide"}
 #load annotations
 annots=RERconverge::read.gmt("gmtfile.gmt")
 annotlist=list(annots)
 names(annotlist)="MSigDBpathways"
 
 #perform permulations
-permCCWithCor = getPermsBinary(20, marineFg, sisters_marine, root_sp, mamRERw, toyTrees, masterTree, permmode="cc",calculateenrich = T, annotlist=annotlist)
+permCCWithCor = getPermsBinary(20, marineFg, sisters_marine, root_sp, mamRERw, toyTrees,
+                               masterTree, permmode="cc",calculateenrich = T,
+                               annotlist=annotlist)
 ```
 
 To run the Species Subset Match (SSM) permulation, we can use the same function `getPermsBinary` while setting `permmode`="ssm". Note that because the SSM method produces distinct sets of permulations for different genes, this method is much more computationally intensive and takes a significantly longer time compared to the CC method. Hence, we advise that the SSM method should be run in batches of smaller numbers of permulations. The outputs of different batches can then be combined using the `combinePermData` function, such as shown in the example below. Let's perform 10 permulations of the first 10 gene trees in the list.
@@ -136,8 +149,10 @@ To run the Species Subset Match (SSM) permulation, we can use the same function 
 trees_example = toyTrees$trees[1:10]
 
 #perform 2 batches of binary SSM permulations
-permSSM1 = getPermsBinary(5, marineFg, sisters_marine, root_sp, mamRERw, toyTrees, masterTree, permmode="ssm",trees_example)
-permSSM2 = getPermsBinary(5, marineFg, sisters_marine, root_sp, mamRERw, toyTrees, masterTree, permmode="ssm",trees_example)
+permSSM1 = getPermsBinary(5, marineFg, sisters_marine, root_sp, mamRERw, toyTrees,
+                          masterTree, permmode="ssm",trees_example)
+permSSM2 = getPermsBinary(5, marineFg, sisters_marine, root_sp, mamRERw, toyTrees,
+                          masterTree, permmode="ssm",trees_example)
 
 #combine the outputs of 2 batches
 combpermSSM = combinePermData(permSSM1, permSSM2, enrich=F)
@@ -151,8 +166,10 @@ RERconverge also allows user to produce permulated binary phenotype trees to use
 
 ```{r}
 #producing one permulated tree using CC permulation
-treeCC = simBinPhenoCC(toyTrees, masterTree, root_sp, marineFg, sisters_marine, pathvec, plotTreeBool=F)
-CCtree = plotTreeHighlightBranches(treeCC,hlspecies=which(treeCC$edge.length==1), hlcols="blue")
+treeCC = simBinPhenoCC(toyTrees, masterTree, root_sp, marineFg, sisters_marine, pathvec,
+                       plotTreeBool=F)
+CCtree = plotTreeHighlightBranches(treeCC,hlspecies=which(treeCC$edge.length==1),
+                                   hlcols="blue")
 ```
 
 For SSM, the permulated tree of a gene may be different from that of another gene if they have different "species membership", meaning if the gene trees may be missing different sets of species. Compared to `simBinPhenoCC`, `simBinPhenoSSM` requires an additional input `tree`, which specifies the gene tree of the specific gene to permulate. Below is an example permulation of a gene that has all marine foregrounds in its tree:
@@ -163,14 +180,18 @@ TTNtree = toyTrees$trees$TTN
 
 #plot the gene tree of TTN
 TTNtreePlot = plotTreeHighlightBranches(TTNtree, 
-                                    hlspecies=which(marineFgTree$edge.length==1), hlcols="blue", 
+                                    hlspecies=which(marineFgTree$edge.length==1),
+                                    hlcols="blue", 
                                     main="TTN tree") #plot individual gene tree
 ```
 
 ```{r, message=F, warning=F, error=F, results=F}
 #generate and plot a SSM permulation of TTN
-TTNtreeSSM = simBinPhenoSSM(TTNtree, toyTrees, root_sp, marineFg, sisters_marine, pathvec, plotTreeBool=F)
-TTNplotSSM = plotTreeHighlightBranches(TTNtreeSSM, hlspecies=which(TTNtreeSSM$edge.length==1), hlcols="blue")
+TTNtreeSSM = simBinPhenoSSM(TTNtree, toyTrees, root_sp, marineFg, sisters_marine, pathvec,
+                            plotTreeBool=F)
+TTNplotSSM = plotTreeHighlightBranches(TTNtreeSSM, 
+                                       hlspecies=which(TTNtreeSSM$edge.length==1),
+                                       hlcols="blue")
 
 ```
 
@@ -186,15 +207,19 @@ marineFgACBD5 = ACBD5tree$tip.label[ind.marine]
 
 #plot the gene tree of ACBD5
 ACBD5treePlot = plotTreeHighlightBranches(ACBD5tree, 
-                                    hlspecies=marineFgACBD5, hlcols=rep("blue",length(marineFgACBD5)), 
+                                    hlspecies=marineFgACBD5,
+                                    hlcols=rep("blue",length(marineFgACBD5)), 
                                     main="ACBD5 tree")
 
 ```
 
 ```{r, message=F, warning=F, error=F, results=F}
 #generate and plot one SSM permulation of ACBD5
-ACBD5treeSSM = simBinPhenoSSM(ACBD5tree, toyTrees, root_sp, marineFg, sisters_marine, pathvec, plotTreeBool=F)
-ACBD5plotSSM = plotTreeHighlightBranches(ACBD5treeSSM, hlspecies=which(ACBD5treeSSM$edge.length==1), hlcols="blue")
+ACBD5treeSSM = simBinPhenoSSM(ACBD5tree, toyTrees, root_sp, marineFg, sisters_marine,
+                              pathvec, plotTreeBool=F)
+ACBD5plotSSM = plotTreeHighlightBranches(ACBD5treeSSM,
+                                         hlspecies=which(ACBD5treeSSM$edge.length==1), 
+                                         hlcols="blue")
 
 ```
 
@@ -204,7 +229,9 @@ To produce multiple permulations using the CC method, the function `generatePerm
 # number of permulations
 numperms = 20
 
-TTNpermulatedTreesCC = generatePermulatedBinPhen(masterTree, numperms, toyTrees, root_sp, marineFg, sisters_marine, pathvec, permmode="cc")
+TTNpermulatedTreesCC = generatePermulatedBinPhen(masterTree, numperms, toyTrees, root_sp,
+                                                 marineFg, sisters_marine, pathvec, 
+                                                 permmode="cc")
 ```
 
 To produce multiple permulations of ONE gene using the SSM method, `generatePermulatedBinPhen` can also be used with `permmode`="ssm". The code below produces 20 SSM permulations of TTN:
@@ -213,7 +240,9 @@ To produce multiple permulations of ONE gene using the SSM method, `generatePerm
 # number of permulations
 numperms = 20
 
-TTNpermulatedTreesSSM = generatePermulatedBinPhen(TTNtree, numperms, toyTrees, root_sp, marineFg, sisters_marine, pathvec, permmode="ssm")
+TTNpermulatedTreesSSM = generatePermulatedBinPhen(TTNtree, numperms, toyTrees, root_sp,
+                                                  marineFg, sisters_marine, pathvec, 
+                                                  permmode="ssm")
 ```
 
 RERconverge also allows users to generate SSM permulations for **multiple** genes at the same time. However, since the SSM method is a lot more computationally intensive compared to the CC method, permulations are run in 'batches' based on distinct species membership. To do this, use the function `generatePermulatedBinPhenSSMBatched`, which requires the following input:
@@ -235,7 +264,8 @@ trees_example = toyTrees$trees[1:10]
 # number of permulations
 numperms = 5
 
-SSMpermulatedTreesBatched = generatePermulatedBinPhenSSMBatched(trees_example, numperms, toyTrees, root_sp, marineFg, sisters_marine, pathvec)
+SSMpermulatedTreesBatched = generatePermulatedBinPhenSSMBatched(trees_example, numperms,
+                                  toyTrees, root_sp, marineFg, sisters_marine, pathvec)
 ```
 
 
@@ -246,12 +276,13 @@ First, conduct standard RERconverge analysis.  Please see full walkthroughs for 
 
 ```{r, message=F, warning=F, error=F, results=F, fig.show="hide"}
 #load RER package
-library(RERconverge)
-rerpath = find.package('RERconverge')
+#library(RERconverge)
+#rerpath = find.package('RERconverge')
 
 #read trees
 toytreefile = "subsetMammalGeneTrees.txt" 
-toyTrees=RERconverge::readTrees(paste(rerpath,"/extdata/",toytreefile,sep=""), max.read = 200)
+toyTrees=RERconverge::readTrees(paste(rerpath,"/extdata/",toytreefile,sep=""), 
+                                max.read = 200)
 
 #load phenotype data
 data("logAdultWeightcm") 
@@ -294,7 +325,8 @@ After calculating parametric statistics above, calculate permulations.  The `get
 mt=toyTrees$masterTree
 mt=root.phylo(mt, outgroup="Platypus", resolve.root=T)
 
-perms=RERconverge::getPermsContinuous(100, logAdultWeightcm, mamRERw, annotlist, toyTrees, mt)
+perms=RERconverge::getPermsContinuous(100, logAdultWeightcm, mamRERw, annotlist, 
+                                      toyTrees, mt)
 corpermpvals=RERconverge::permpvalcor(res, perms)
 enrichpermpvals=RERconverge::permpvalenrich(enrichment, perms)
 
@@ -305,7 +337,7 @@ res$permpvaladj=p.adjust(res$permpval, method="BH")
 count=1
 while(count<=length(enrichment)){
   enrichment[[count]]$permpval=enrichpermpvals[[count]][match(rownames(enrichment[[count]]),
-                                                              names(enrichpermpvals[[count]]))]
+                                                        names(enrichpermpvals[[count]]))]
   enrichment[[count]]$permpvaladj=p.adjust(enrichment[[count]]$permpval, method="BH")
   count=count+1
 }
@@ -319,8 +351,10 @@ This pipeline may be useful in the following cases
 
 
 ```{r, message=F, warning=F, error=F, results=F}
-permsnoenrich=RERconverge::getPermsContinuous(100, logAdultWeightcm, mamRERw, annotlist, toyTrees, mt, calculateenrich = F)
-permswithenrich=RERconverge::getEnrichPermsContinuous(permsnoenrich, enrichment, annotlist)
+permsnoenrich=RERconverge::getPermsContinuous(100, logAdultWeightcm, mamRERw, annotlist, 
+                                              toyTrees, mt, calculateenrich = F)
+permswithenrich=RERconverge::getEnrichPermsContinuous(permsnoenrich, enrichment,
+                                                      annotlist)
 corpermpvals2=RERconverge::permpvalcor(res, permswithenrich)
 enrichpermpvals2=RERconverge::permpvalenrich(enrichment, permswithenrich)
 
@@ -333,7 +367,8 @@ Note variations in these two separate sets of permulation p-values.  This stocha
 Permulations can also be run in batches and combined using `combinePermData`.  This function would be useful for combining several permulation batches run in tandem for computational efficiency.
 
 ```{r, message=F, warning=F, error=F, results=F}
-perm2=RERconverge::getPermsContinuous(100, logAdultWeightcm, mamRERw, annotlist, toyTrees, mt)
+perm2=RERconverge::getPermsContinuous(100, logAdultWeightcm, mamRERw, annotlist, 
+                                      toyTrees, mt)
 combperms=RERconverge::combinePermData(perms, perm2)
 ```
 
